test/spec_vectors/simd_f32x4/fail/module_16.wat
(module (func $f32x4.max-arg-empty (result v128) (f32x4.max)))